feat: Add form and security helpers for improved input handling and validation
- Introduced form_helper.php with functions for displaying validation errors, success messages, and generating form fields (text, textarea, select, checkbox).
- Added security_helper.php for input sanitization, validation, and security checks including token generation and password hashing.
- Implemented language files for authentication messages in German, English, and Turkish.
- Created AuditLog class for structured logging of audit events.
- Developed BaseModel for common model functionalities including filtering, searching, and slug generation.
- Enhanced view components for alerts, breadcrumbs, form fields, pagination, footer, and navbar for better UI integration.

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,14 @@
     "scripts": {
         "post-update-cmd": [
             "@composer dump-autoload"
-        ]
+        ],
+        "serve": "php spark serve",
+        "migrate": "php spark migrate --all",
+        "seed:admin": "php spark db:seed AdminSeeder",
+        "seed:property": "php spark db:seed \"App\\\\Modules\\\\Property\\\\Database\\\\Seeds\\\\PropertySeeder\"",
+        "routes": "php spark routes",
+        "cache:clear": "php spark cache:clear",
+        "release": "php scripts/build-release.php"
     },
     "minimum-stability": "stable",
     "prefer-stable": true
